Fix ui on mobile

--- a/cv/assets/css/style.scss
+++ b/cv/assets/css/style.scss
@@ -19,6 +19,11 @@ p {
   width: 100%;
   max-width: 1024px;
   margin: auto;
+
+  @media (min-width: 768px) {
+    margin-top: 40px;
+    margin-bottom: 40px;
+  }
 }
 
 
